# de-opa-1

./: .gitignore  README.md  collectdata.ipynb  collectdataV2.ipynb  v2_criptocoin_bitcoin_oscar.ipynb
colab-files/: OPA_1_cryptobot-oscarcortez.ipynb  collectdataV2.ipynb  collectdataV3.ipynb
collect-data/: Dockerfile  Dockerfile_Dash  README.md  docker-compose.yml  env.sh  historical.sh  pyproject.toml  streaming.sh
collect-data/collect_data/: bitcoin-last-day.csv  cron_main.py  cron_main_daily.py  fastapi-legacy.py  fastapi2.py  main.py  main2.py  main_env.py
collect-data/collect_data/DB/: database.py  mongodb_connection.py  url_factory.py
collect-data/collect_data/DB/sql_connections/: mysql_connection.py  postgres_connection.py  sqlite_connection.py
collect-data/collect_data/DB/sql_url/: mysql_url.py  postgres_url.py  sqlite_url.py
collect-data/collect_data/api/: fastapi-legacy.py  main.py
collect-data/collect_data/api_client/: binance_api_client.py
collect-data/collect_data/app/: fastapi.py  main.py  main_postgres.py
collect-data/collect_data/application/: binance_data_application.py  binance_loader.py
collect-data/collect_data/config/: api_binance_settings.yaml  data_yaml_generator.py  development.settings.yaml  development_settings.yaml  docker_settings.yaml  local.settings.yaml  production.settings.yaml  secrets.yaml.example  settings.dev.yaml  settings.prod.yaml  settings.yaml
collect-data/collect_data/container/: api_binance_data_container.py  binance_data_container.py  cron-1.py
collect-data/collect_data/cron/: binance_data_updater.py  creds.py  cron.py  crontest.py  db.py  test.ipynb
collect-data/collect_data/dash/: main.py
collect-data/collect_data/data/: history.csv  opa_binance.db  streaming_data.json
collect-data/collect_data/logs/: history.csv
collect-data/collect_data/repositories/: binance_data_csv_repository.py  binance_data_json_repository.py  binance_data_mongodb_repository.py  binance_data_mysql_repository.py  binance_data_postgres_repository.py  binance_data_repository.py  binance_data_sql_repository.py  binance_data_sqlite_repository.py
collect-data/collect_data/routers/: historical_data.py  historical_data_raw.py  streaming_data.py  streaming_data_raw.py
collect-data/collect_data/services/: binance_data_service.py
collect-data/collect_data/tools/: args_reader.py  binance_date_generator.py  command_line_arguments.py  constants.py  data_yaml_generator.py  env_selector.py  get_helper.py  history.py  os_environment.py  print_helper.py  print_table.py  print_terminal_title.py  show_datetime_execution.py  str_short_to_complete.py  string_to_bool.py  terminal_title_generator.py  yaml_reader.py
collect-data/collect_data/tools/constants/: destination_source.py
collect-data/collect_data/tools/decorators/: console_loader.py  logger.py  show_properties.py  timer.py
collect-data/collect_data/tools/txt/: cryptobot_binance.txt
infraestructure/mongodb/: docker-compose.yml
infraestructure/mysql/: docker-compose.yml
infraestructure/postgres/: docker-compose.yml
ml_crypto/: README.md  pyproject.toml
ml_crypto/ml_crypto/: main.py  test.csv
